# fastapi-backend-template

./: .env.example  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  log.py  logging.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  log.py  main.py
app/base/: do.py  enums.py
app/exceptions/: __init__.py
app/middleware/: auth.py  context.py  envelope.py  headers.py  logging.py
app/persistence/amqp_consumer/: __init__.py
app/persistence/amqp_publisher/: __init__.py
app/persistence/database/: __init__.py  account.py  s3_file.py  util.py
app/persistence/s3/: __init__.py
app/processor/amqp/: __init__.py
app/processor/http/: __init__.py  account.py  public.py
app/utils/: context.py  security.py
deploy/: helm_deploy.sh
deploy/helm/charts/templates/: deployment.yaml  service.yaml
deploy/helm/development/: values.yaml
deploy/helm/production/: values.yaml
middleware/: auth.py  context.py  envelope.py  logging.py
persistence/amqp_consumer/: __init__.py
persistence/database/: __init__.py  account.py  s3_file.py  util.py
processor/http/: account.py  public.py
test/: __init__.py
test/app/middleware/: test_auth.py  test_envelope.py
test/app/persistence/database/: test_account.py
test/middleware/: test_auth.py  test_envelope.py
test/persistence/database/: test_account.py
util/: mock.py
